# machine-learning-aulas

./: .gitattributes  .gitignore  LICENSE  Makefile  PLANO_CORRECOES.md  README.md  install.bat  install.sh  mypy.ini  pyproject.toml  requirements.txt  update-course.sh
core/: __init__.py
core/grading/: __init__.py  api.py  result_schema.py  sandbox.py
core/utils/: __init__.py  io.py  plotting.py  seeds.py
datasets/: README.md
datasets/kaggle/: .gitkeep
datasets/synthetic/: classification_dataset.csv  clustering_dataset.csv  regression_dataset.csv  timeseries_dataset.csv
docs/: CONTENT_SCHEMA.md  CONTRIBUTING.md  EXTENDING.md  STUDENT-GUIDE.md
modules/01-fundamentos/: module.yaml
modules/01-fundamentos/exercises/: 01_guia_exercicio.md  01_preprocess.ipynb  01_preprocess_tests.py
modules/01-fundamentos/lessons/: 01_intro.ipynb  02_fluxo_ml.ipynb
modules/02-classificacao/: module.yaml
modules/02-regressao/: module.yaml
modules/03-classificacao/: module.yaml
modules/03-validacao/: module.yaml
modules/03-validacao_otimizacao/: module.yaml
modules/04-feature-engineering/: module.yaml
modules/04-validacao/: module.yaml
modules/05-feature-engineering/: module.yaml
modules/05-nao-supervisionado/: module.yaml
modules/05-redes-neurais/: module.yaml
modules/06-deep-learning/: module.yaml
modules/06-nao-supervisionado/: module.yaml
modules/06-redes-neurais/: module.yaml
modules/06-series-temporais/: module.yaml
modules/07-deep-learning/: module.yaml
modules/07-nao-supervisionado/: module.yaml
modules/07-redes-neurais/: module.yaml
modules/07-series-temporais/: module.yaml
modules/08-deep-learning/: module.yaml
modules/08-projetos/: module.yaml
modules/08-redes-neurais/: module.yaml
modules/09-deep-learning/: module.yaml
modules/09-projetos/: module.yaml
modules/10-projetos/: module.yaml
scripts/: check-structure.py  clean-notebooks.py  grade_exercise.py  make_dataset_synth.py  manage_tests.py  run_all_notebooks.py  setup-student.py  setup_env.sh  tasks.py
tests/: test_content_schema.py  test_core_grading.py  test_examples_execute.py  test_regression_metrics.py
tests/exercises/: 01-fundamentos_01_preprocess_tests.py  05-redes-neurais_01_mnist_classification_tests.py  README.md
(+51 files in other folders)
